[gd_scene load_steps=5 format=3 uid="uid://dmpus2xfnow5n"]

[ext_resource type="Script" path="res://Scripts/patio_1.gd" id="1_mbffu"]
[ext_resource type="Texture2D" uid="uid://nnqaqx1boq15" path="res://background/m3.jpg" id="2_djw8s"]
[ext_resource type="Texture2D" uid="uid://c61jlcmn1kuft" path="res://assets/arrow_down.png" id="3_6p6hu"]
[ext_resource type="Texture2D" uid="uid://due0ycww4ijgt" path="res://assets/arrow_up.png" id="4_ey4wh"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_mbffu")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-5, -8)

[node name="Pasillo_m3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(644, 367)
scale = Vector2(0.998437, 0.752083)
texture = ExtResource("2_djw8s")

[node name="Button" type="Button" parent="ParallaxBackground/ParallaxLayer/Pasillo_m3"]
offset_left = -26.0
offset_top = 372.0
offset_right = 1567.0
offset_bottom = 1843.0
scale = Vector2(0.061849, 0.0724826)
icon = ExtResource("3_6p6hu")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Sprite2D" type="Button" parent="ParallaxBackground/ParallaxLayer/Pasillo_m3"]
offset_left = 165.258
offset_top = -46.5374
offset_right = 1480.26
offset_bottom = 1302.46
rotation = -4.71115
scale = Vector2(0.0722657, 0.069987)
icon = ExtResource("4_ey4wh")
flat = true
expand_icon = true

[node name="Sprite2D2" type="Button" parent="ParallaxBackground/ParallaxLayer/Pasillo_m3"]
offset_left = -158.247
offset_top = -13.2964
offset_right = 1156.75
offset_bottom = 1335.7
rotation = -0.00342059
scale = Vector2(0.0722657, 0.069987)
icon = ExtResource("4_ey4wh")
flat = true
expand_icon = true

[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/Pasillo_m3/Button" to="." method="_on_button_pressed"]
