[gd_scene load_steps=14 format=3 uid="uid://bf0ppqh382jg6"]

[ext_resource type="Script" path="res://Scripts/patio_1.gd" id="1_awe03"]
[ext_resource type="Texture2D" uid="uid://64o6h46cwog2" path="res://background/Pasillo Casino.jpg" id="1_ynx14"]
[ext_resource type="FontFile" uid="uid://cbu68tu4ukqhr" path="res://Fonts/comickbook/ComickBook_CAPS.ttf" id="2_twkfr"]
[ext_resource type="Texture2D" uid="uid://c61jlcmn1kuft" path="res://assets/arrow_down.png" id="3_7cuvy"]
[ext_resource type="PackedScene" uid="uid://c5xn43o1f54s1" path="res://Scenes/Extras/clock_timer.tscn" id="3_msei6"]
[ext_resource type="LabelSettings" uid="uid://cyyft1uajvt35" path="res://LabelSettings/TextLabelsFlechas.tres" id="6_tedti"]
[ext_resource type="FontFile" uid="uid://77tm5kpkgub6" path="res://Fonts/comickbook/ComickBook_Simple.ttf" id="7_bjhjf"]

[sub_resource type="LabelSettings" id="LabelSettings_xxt8p"]

[sub_resource type="Animation" id="Animation_i0amt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_l0obv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.5),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1tse1"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bty0q"]
_data = {
"RESET": SubResource("Animation_i0amt"),
"fade_in": SubResource("Animation_l0obv"),
"fade_out": SubResource("Animation_1tse1")
}

[sub_resource type="LabelSettings" id="LabelSettings_fu200"]
font = ExtResource("7_bjhjf")
font_size = 25
outline_size = 6
outline_color = Color(0, 0, 0, 1)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_awe03")

[node name="TimerC" type="Label" parent="."]
offset_left = 1.0
offset_right = 97.0
offset_bottom = 55.0
scale = Vector2(2.11, 2.11)
theme_override_fonts/font = ExtResource("2_twkfr")
label_settings = SubResource("LabelSettings_xxt8p")
horizontal_alignment = 1
vertical_alignment = 1
text_overrun_behavior = 2

[node name="ClockTimer" parent="." instance=ExtResource("3_msei6")]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-5, -8)

[node name="Patio_1" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(647, 366)
scale = Vector2(1, 0.75)
texture = ExtResource("1_ynx14")

[node name="Button" type="Button" parent="ParallaxBackground/ParallaxLayer/Patio_1"]
offset_left = -26.0
offset_top = 372.0
offset_right = 1567.0
offset_bottom = 1843.0
scale = Vector2(0.061849, 0.0724826)
icon = ExtResource("3_7cuvy")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Entrada" type="Label" parent="ParallaxBackground/ParallaxLayer/Patio_1/Button"]
layout_mode = 0
offset_left = -242.526
offset_top = -533.461
offset_right = 2017.47
offset_bottom = -47.461
text = "Ir a Entrada"
label_settings = ExtResource("6_tedti")

[node name="Button2" type="Button" parent="ParallaxBackground/ParallaxLayer/Patio_1"]
offset_left = 69.9785
offset_top = 126.673
offset_right = 1662.98
offset_bottom = 1597.67
rotation = -3.14426
scale = Vector2(0.061849, 0.0724826)
icon = ExtResource("3_7cuvy")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Pasillo M3" type="Label" parent="ParallaxBackground/ParallaxLayer/Patio_1/Button2"]
layout_mode = 0
offset_left = 2030.54
offset_top = 2028.19
offset_right = 4617.54
offset_bottom = 2514.19
rotation = 3.14159
text = "Ir a Pasillo M3"
label_settings = ExtResource("6_tedti")

[node name="Button3" type="Button" parent="ParallaxBackground/ParallaxLayer/Patio_1"]
offset_left = -472.0
offset_top = -12.0
offset_right = 1121.0
offset_bottom = 1459.0
rotation = 1.5768
scale = Vector2(0.061849, 0.0724826)
icon = ExtResource("3_7cuvy")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Patio Casino" type="Label" parent="ParallaxBackground/ParallaxLayer/Patio_1/Button3"]
layout_mode = 0
offset_left = -265.105
offset_top = 2153.64
offset_right = 2727.9
offset_bottom = 2639.64
rotation = 4.71239
text = "Ir a Patio Casino"
label_settings = ExtResource("6_tedti")

[node name="Button4" type="Button" parent="ParallaxBackground/ParallaxLayer/Patio_1"]
offset_left = 161.265
offset_top = 75.6484
offset_right = 1754.26
offset_bottom = 1546.65
rotation = -1.55766
scale = Vector2(0.061849, 0.0724826)
icon = ExtResource("3_7cuvy")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Diario mural" type="Label" parent="ParallaxBackground/ParallaxLayer/Patio_1/Button4"]
layout_mode = 0
offset_left = 114.888
offset_top = -570.646
offset_right = 3117.89
offset_bottom = -84.6464
rotation = 1.5708
theme_override_constants/outline_size = 78
theme_override_fonts/font = ExtResource("7_bjhjf")
theme_override_font_sizes/font_size = 370
text = "Ir a Diario Mural"

[node name="Transition" type="AnimationPlayer" parent="ParallaxBackground/ParallaxLayer/Patio_1"]
libraries = {
"": SubResource("AnimationLibrary_bty0q")
}

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground/ParallaxLayer/Patio_1/Transition"]
offset_right = 1282.0
offset_bottom = 719.0
color = Color(0, 0, 0, 1)

[node name="Objetivo" type="Label" parent="."]
offset_left = 818.0
offset_top = 13.0
offset_right = 1265.0
offset_bottom = 50.0
label_settings = SubResource("LabelSettings_fu200")

[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/Patio_1/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/Patio_1/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/Patio_1/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/Patio_1/Button4" to="." method="_on_button_4_pressed"]
[connection signal="animation_finished" from="ParallaxBackground/ParallaxLayer/Patio_1/Transition" to="." method="_on_transition_animation_finished"]
